# Digital_Noise_in_Qadence

./: README.md  pyproject.toml
Pyqtorch/: Noisy_Grover.ipynb
